@startuml
'https://plantuml.com/sequence-diagram

abstract class BNode

BNode <|-- InnerNode
BNode <|-- Leaf

InnerNode --> "1 " BNode : left
InnerNode --> "1 " BNode : right

abstract class BNode{
    int value
    +{abstract}void addL(BNode node)
    +{abstract}void addR(BNode node)
    +{abstract}void removeL(BNode node)
    +{abstract}void removeR(BNode node)
    +{abstract}String travel()
}

class InnerNode{
    +String travel()
}

note left of InnerNode::travel
    Duyệt theo thứ tự NLR
    - Đưa value của note vào stringBuilder
    - Kiểm tra left!=null:
        Đưa chuỗi của left vào stringBuilder
    - Kiểm tra right!=null:
        Đưa chuỗi của right vào stringBuilder
end note

note right of InnerNode::travel
    Composite
end note

note right of Leaf
    Component
end note
@enduml